[package]
authors = ["rotemy"]
description = "Alerting and monitoring framework"
edition = "2021"
license = "Apache-2.0"
name = "klaxon"
version = "0.1.0"

[dependencies]
anyhow = "1.0.53"
futures = "0.3.21"
log = "0.4.14"
pagerduty-rs = "0.1.5"
serde = "1.0.136"

[dev-dependencies]
clap = {version = "3", features = ["derive", "env"]}
env_logger = "0.9.0"
maplit = "1"
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
